<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp">
        <ImageButton

            android:id="@+id/botaocamera"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:background="@drawable/ic_camera"/>
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_icon_camera"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp">
    <ImageButton

        android:id="@+id/botaogaleria"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@drawable/ic_galeria"/>
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_icon_galeria"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageButton
        android:id="@+id/botaoicones"
        android:layout_gravity="center"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@drawable/iconesnerd"/>
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_icone_heroi"/>
    </LinearLayout>
</LinearLayout>